--- a/autom4te.cache/traces.1
+++ b/autom4te.cache/traces.1
@@ -263,24 +263,25 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^pkgpyexecdir$])
 m4trace:configure.ac:10: -1- AC_SUBST([XDOTOOL_CHECK])
 m4trace:configure.ac:10: -1- AC_SUBST_TRACE([XDOTOOL_CHECK])
 m4trace:configure.ac:10: -1- m4_pattern_allow([^XDOTOOL_CHECK$])
-m4trace:configure.ac:119: -1- AC_CONFIG_FILES([Makefile
+m4trace:configure.ac:120: -1- AC_CONFIG_FILES([Makefile
 		 src/Makefile
 		haarcascade/Makefile
+		res/Makefile
 ])
-m4trace:configure.ac:125: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
-m4trace:configure.ac:125: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:125: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([LTLIBOBJS])
-m4trace:configure.ac:125: -1- m4_pattern_allow([^LTLIBOBJS$])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([top_builddir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([top_build_prefix])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([srcdir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([abs_srcdir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([top_srcdir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([abs_top_srcdir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([builddir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([abs_builddir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([abs_top_builddir])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([INSTALL])
-m4trace:configure.ac:125: -1- AC_SUBST_TRACE([MKDIR_P])
+m4trace:configure.ac:127: -1- AC_SUBST([LIB@&t@OBJS], [$ac_libobjs])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([LIB@&t@OBJS])
+m4trace:configure.ac:127: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:127: -1- AC_SUBST([LTLIBOBJS], [$ac_ltlibobjs])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([LTLIBOBJS])
+m4trace:configure.ac:127: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([top_builddir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([top_build_prefix])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([srcdir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([abs_srcdir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([top_srcdir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([abs_top_srcdir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([builddir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([abs_builddir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([abs_top_builddir])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([INSTALL])
+m4trace:configure.ac:127: -1- AC_SUBST_TRACE([MKDIR_P])
