--- a/autom4te.cache/traces.2
+++ b/autom4te.cache/traces.2
@@ -992,21 +992,22 @@ m4trace:configure.ac:4: -1- m4_pattern_allow([^pythondir$])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^pkgpythondir$])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^pyexecdir$])
 m4trace:configure.ac:4: -1- m4_pattern_allow([^pkgpyexecdir$])
-m4trace:configure.ac:8: -1- PKG_CHECK_MODULES([Handibox], [xdotool >= $GCONF_REQUIRED])
-m4trace:configure.ac:8: -1- PKG_PROG_PKG_CONFIG
-m4trace:configure.ac:8: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^PKG_CONFIG$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^PKG_CONFIG$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^Handibox_CFLAGS$])
-m4trace:configure.ac:8: -1- m4_pattern_allow([^Handibox_LIBS$])
-m4trace:configure.ac:8: -1- PKG_CHECK_EXISTS([xdotool >= $GCONF_REQUIRED], [pkg_cv_[]Handibox_CFLAGS=`$PKG_CONFIG --[]cflags "xdotool >= $GCONF_REQUIRED" 2>/dev/null`
+m4trace:configure.ac:10: -1- m4_pattern_allow([^XDOTOOL_CHECK$])
+m4trace:configure.ac:16: -1- PKG_CHECK_MODULES([OPENCV], [python-opencv >= $OPENCV])
+m4trace:configure.ac:16: -1- PKG_PROG_PKG_CONFIG
+m4trace:configure.ac:16: -1- m4_pattern_forbid([^_?PKG_[A-Z_]+$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^PKG_CONFIG(_(PATH|LIBDIR|SYSROOT_DIR|ALLOW_SYSTEM_(CFLAGS|LIBS)))?$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^PKG_CONFIG_(DISABLE_UNINSTALLED|TOP_BUILD_DIR|DEBUG_SPEW)$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^PKG_CONFIG_PATH$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^PKG_CONFIG_LIBDIR$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^PKG_CONFIG$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^OPENCV_CFLAGS$])
+m4trace:configure.ac:16: -1- m4_pattern_allow([^OPENCV_LIBS$])
+m4trace:configure.ac:16: -1- PKG_CHECK_EXISTS([python-opencv >= $OPENCV], [pkg_cv_[]OPENCV_CFLAGS=`$PKG_CONFIG --[]cflags "python-opencv >= $OPENCV" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
-m4trace:configure.ac:8: -1- PKG_CHECK_EXISTS([xdotool >= $GCONF_REQUIRED], [pkg_cv_[]Handibox_LIBS=`$PKG_CONFIG --[]libs "xdotool >= $GCONF_REQUIRED" 2>/dev/null`
+m4trace:configure.ac:16: -1- PKG_CHECK_EXISTS([python-opencv >= $OPENCV], [pkg_cv_[]OPENCV_LIBS=`$PKG_CONFIG --[]libs "python-opencv >= $OPENCV" 2>/dev/null`
 		      test "x$?" != "x0" && pkg_failed=yes ], [pkg_failed=yes])
-m4trace:configure.ac:8: -1- _PKG_SHORT_ERRORS_SUPPORTED
-m4trace:configure.ac:118: -1- m4_pattern_allow([^LIB@&t@OBJS$])
-m4trace:configure.ac:118: -1- m4_pattern_allow([^LTLIBOBJS$])
+m4trace:configure.ac:16: -1- _PKG_SHORT_ERRORS_SUPPORTED
+m4trace:configure.ac:130: -1- m4_pattern_allow([^LIB@&t@OBJS$])
+m4trace:configure.ac:130: -1- m4_pattern_allow([^LTLIBOBJS$])
